<resources>
    <string name="app_name">Eatfull</string>
    <string name="action_contact">contact us </string>
    <string name="action_terms_conditions">terms&amp;conditions</string>
    <string name="title_activity_item_list">ItemList</string>
    <string name="title_activity_item_detail_view">item_detail_view</string>
    <string name="title_activity_waste">waste</string>
    <string name="itemimg">ItemImg</string>
    <string name="item">item</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="wishBtn">Wish</string>
    <string name="compBtn">Comp</string>
    <string name="cartBtn">cart</string>
    <array name="Sort">
        <item>sort by</item>
        <item>Price(low to high)</item>
        <item>Price(high to low)</item>
        <item>Name(A-Z)</item>
        <item>Name(Z-A)</item>
    </array>
    <array name="View">
        <item>view</item>
        <item>List</item>
        <item>Grid</item>
    </array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
</resources>
