<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.65">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:id="@+id/ItemImg"
                    android:layout_gravity="center"
                    android:contentDescription="@string/itemimg" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmallInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ItemImgProg"
                    android:layout_gravity="center" />
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.35">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/item"
                    android:id="@+id/ItemNameTV" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/description"
                    android:id="@+id/ItemDescriptionTV"
                    android:singleLine="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/price"

                    android:id="@+id/ItemPriceTV"
                    android:textStyle="bold" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ItemRatingBar"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:mirrorForRtl="false"
                    android:stepSize=".5"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:text="@string/wishBtn"
                        android:background="#289c9c9c"
                        android:id="@+id/WishBtn"
                        android:textColor="@color/text"
                        android:onClick="CallWish" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:text="@string/compBtn"
                        android:background="#289c9c9c"
                        android:id="@+id/CompBtn"
                        android:textColor="@color/text"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:background="#289c9c9c"
                        android:text="@string/cartBtn"
                        android:textColor="@color/text"
                        android:id="@+id/CartBut" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


